--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
     left: 0;
     height: 100%;
     width: 250px;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: #093E8D;
     color: white;
     padding: 20px;
     transform: translateX(-100%);
@@ -67,4 +67,5 @@ body {
 
 .side-menu.open {
     transform: translateX(0);
+    padding top: 10px;
 }
