--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
     left: 0;
     height: 100%;
     width: 250px;
-    background-color: #093E8D;
+    background-color: red;
     color: white;
     padding: 20px;
     transform: translateX(-100%);
